--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -9,5 +9,22 @@
         android:id="@+id/homeFragment"
         android:name="com.example.fruit_app_kotlin_task.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_fruitDetailFragment"
+            app:destination="@id/fruitDetailFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/fruitDetailFragment"
+        android:name="com.example.fruit_app_kotlin_task.detail.FruitDetailFragment"
+        android:label="fragment_fruit_detail"
+        tools:layout="@layout/fragment_fruit_detail">
+        <argument
+            android:name="selectedProperty"
+            app:argType="com.example.fruit_app_kotlin_task.response.Cdata"
+        />
+
+    </fragment>
+
 </navigation>
