--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -19,8 +19,8 @@
         android:id="@+id/fruitDetailFragment"
         android:name="com.example.fruit_app_kotlin_task.detail.FruitDetailFragment"
         android:label="fragment_fruit_detail"
-        tools:layout="@layout/fragment_fruit_detail">
-
+        tools:layout="@layout/fragment_fruit_detail"
+        >
         <argument
             android:name="selectedProperty"
             app:argType="com.example.fruit_app_kotlin_task.response.Cdata"
