--- a/app/src/main/res/layout/fragment_fruit_detail.xml
+++ b/app/src/main/res/layout/fragment_fruit_detail.xml
@@ -14,22 +14,26 @@
         <ImageView
             android:id="@+id/img_fruit"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:scaleType="fitCenter"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/guideLine_horizontal_img"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_verticle_top1"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/guideline_verticle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.22000003"
             tools:src="@tools:sample/avatars" />
+
 <LinearLayout
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-
-    app:layout_constraintStart_toStartOf="@+id/guideline_verticle"
+android:layout_marginStart="10dp"
+ app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/guideline_verticle_top1"
+    app:layout_constraintBottom_toBottomOf="@+id/guideLine_horizontal_img"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/img_fruit"
     >
     <LinearLayout
         android:layout_width="wrap_content"
@@ -194,7 +198,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.1" />
+            app:layout_constraintGuide_percent="0.05" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_verticle_top1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.35" />
+
+
+
+
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideLine_horizontal_img"
