--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -24,7 +24,14 @@
         <argument
             android:name="selectedProperty"
             app:argType="com.example.fruit_app_kotlin_task.response.Cdata"
+
         />
+        <action
+            android:id="@+id/action_fruitDetailFragment_to_homeFragment"
+            app:popUpTo="@id/homeFragment"
+            />
+
+
     </fragment>
 
 </navigation>
