--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
 <resources>
     <dimen name="homeFrg_sideMargin">10dp</dimen>
     <dimen name="marign_top_detailedScreen">5dp</dimen>
+    <dimen name="txt_checkout">18sp</dimen>
 
 </resources>
