--- a/app/src/main/res/layout/fragment_fruit_detail.xml
+++ b/app/src/main/res/layout/fragment_fruit_detail.xml
@@ -131,32 +131,23 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideLine_horizontal_img"
-
-            >
-
-            <TextView
-                android:id="@+id/txt_grandTotalPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="10dp"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/guideline_verticle_bottom"
-                app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/guideLine_horizontal_img">
 
             <TextView
                 android:id="@+id/txt_FruitPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:layout_marginTop="10dp"
+                android:textColor="@color/black"
+                android:textSize="25sp"
                 app:layout_constraintStart_toStartOf="@+id/guideline_verticle_bottom"
-                app:layout_constraintTop_toBottomOf="@+id/txt_grandTotalPrice" />
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <!-- (+ - system) -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="@+id/guideline_verticle_bottom2"
                 app:layout_constraintTop_toTopOf="parent">
@@ -172,6 +163,7 @@
                     android:id="@+id/et_qtyUpdate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:focusable="false"
                     android:inputType="number"
                     android:text="1" />
 
@@ -207,6 +199,7 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_percent="0.95" />
 
+            <!-- bottom Checkout part -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -326,9 +319,9 @@
 
                         <TextView
                             android:id="@+id/txt_deliveryRate"
-                            android:layout_width="17dp"
-                            android:layout_height="16dp"
-                            android:text="50Rs"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="50₹"
                             android:textColor="@color/black"
                             android:textSize="@dimen/txt_checkout"
                             app:layout_constraintEnd_toEndOf="parent"
