--- a/app/src/main/res/layout/fragment_fruit_detail.xml
+++ b/app/src/main/res/layout/fragment_fruit_detail.xml
@@ -62,7 +62,7 @@
                             android:id="@+id/txt_fruitName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=""
+                            android:text="@{fruitViewModel.str_topView_fruitName}"
                             android:textAllCaps="true"
                             android:textColor="@color/white"
                             android:textSize="18sp"
@@ -74,7 +74,7 @@
                             android:id="@+id/txt_fruitDesc"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=""
+                            android:text="@{fruitViewModel.str_topView_fruitDesc}"
                             android:textColor="@color/white"
 
                             />
@@ -84,7 +84,7 @@
                             android:id="@+id/txt_totalQty"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=""
+                            android:text="@{fruitViewModel.str_topView_TotalQty}"
                             android:textColor="@color/white"
 
                             />
@@ -93,7 +93,7 @@
                             android:id="@+id/txt_farmerName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=""
+                            android:text="@{fruitViewModel.str_topView_farmerName}"
                             android:textColor="@color/white"
 
                             />
@@ -102,7 +102,7 @@
                             android:id="@+id/txt_farmerCompany"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=""
+                            android:text="@{fruitViewModel.str_topView_FarmerCompany}"
                             android:textColor="@color/white"
 
                             />
@@ -172,14 +172,16 @@
                             android:onClick="@{() -> fruitViewModel.addQty()}"
                             android:background="@color/black"
                             android:src="@drawable/ic_add" />
-
+<!--
+                            android:text="@{() -> fruitViewModel.fruitCartQty.toString()}"
+-->
                         <EditText
                             android:id="@+id/et_qtyUpdate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:focusable="false"
                             android:inputType="number"
-                            android:text="1" />
+                             />
 
                         <ImageButton
                             android:id="@+id/btn_img_minusQty"
