data binding done

--- a/app/src/main/res/layout/fragment_fruit_detail.xml
+++ b/app/src/main/res/layout/fragment_fruit_detail.xml
@@ -276,7 +276,7 @@
                                     android:id="@+id/txt_subtotal"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="0.0"
+                                    android:text="@{fruitViewModel.fruitSubTotal}"
                                     android:textColor="@color/black"
                                     android:textSize="@dimen/txt_checkout"
                                     app:layout_constraintEnd_toEndOf="parent"
@@ -370,7 +370,7 @@
                                     android:id="@+id/txt_Total"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="0.0"
+                                    android:text="@{fruitViewModel.fruitFinalTotal}"
                                     android:textColor="@color/black"
                                     android:textSize="@dimen/txt_checkout"
                                     app:layout_constraintEnd_toEndOf="parent"
